--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+<div class='container'>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -34,4 +34,6 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+
+</div>
 <% end %>
