--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,6 +11,12 @@
     </div>
   <% end %>
 <div class='container'>
+
+  <div class="field">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+  </div>
+
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
