--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,25 +1,28 @@
-<p id="notice"><%= notice %></p>
 
-<%= image_tag @product.image_url %>
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class='component center'>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Year:</strong>
-  <%= @product.year %>
-</p>
+  <%= image_tag @product.image_url %>
+  <p>
+    <strong>Name:</strong>
+    <%= @product.name %>
+  </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+  <p>
+    <strong>Year:</strong>
+    <%= @product.year %>
+  </p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @product.description %>
+  </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+  <p>
+    <strong>Price:</strong>
+    <%= @product.price %>
+  </p>
+
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+  <%= link_to 'Back', products_path %>
+</div>
