--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,61 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Year</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.year %></td>
-        <td><%= product.description %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+<!-- Showcase -->
+<div class="showcase">
+  <div class="row">
+    <div class="col s12 m10 offset-m1 center">
+      <h5>Barter & Buy </h5>
+      <h2>Buying, selling or exchange your next smartphone</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit fugit deserunt quos provident aliquam inventore.</p>
+      <br>
+      <br>
+      <a href="solutions.html" class="btn btn-large white purple-text">Learn More</a>
+      <a href="signup.html" class="btn btn-large purple white-text">Sign Up</a>
+    </div>
+  </div>
+</div>
+</header>
 
-<%= link_to 'New Product', new_product_path %>
+
+<div class="row">
+<h2>Products</h2>
+  <% @products.each do |product| %>
+    <div class="col s3">
+
+        <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+        <%= link_to image_tag(product.image.url(:medium)), product %>
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"><%= product.name %></span>
+          <p>Year: <%= product.year %></p>
+          <p>Price:<%= product.price %></p>
+
+          <button class="btn small green lighten-3">
+            <%= link_to 'Show', product %>
+          </button>
+
+          <button class="btn small yellow lighten-3">
+            <%= link_to 'Edit', edit_product_path(product) %>
+          </button>
+          
+          <button class="btn small red lighten-3">
+            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </button>
+        </div>     
+      </div>
+    </div>
+  <% end %>
+  <br>
+<button class="btn large purple accent-4 ">
+  <%= link_to 'New Product', new_product_path %>
+</button>
+</div>
+
+
+
+
+
