--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,8 @@
 <div class='component center'>
   <p id="notice"><%= notice %></p>
 
-  <%= image_tag @product.image_url %>
+  
+  <%= image_tag @product.image.url(:large) %>
   <p>
     <strong>Name:</strong>
     <%= @product.name %>
