Deleted carrierwave file

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,9 @@ body {
     display: flex;
     min-height: 950vh;
     flex-direction: column;
+    
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f5f5f5;
   }
 
   main {
@@ -11,4 +14,17 @@ body {
 .showcase{
     background-image: url('banner1.jpg');
     padding-top: 10px;
+}
+ 
+.nav-wrapper .nav-brand > li > a {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: white;
+}
+.show-button{  
+  margin: 20px;
+  padding: 10px;
+  color: #000;
+   
 }
