--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 
 <nav>
   <div class="nav-wrapper black ">  
-    <a href="/" class="brand-logo">Logo</a>   
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
+    <a href="/" class="brand-logo">Barter Or Buy</a>   
+    <ul class="nav-brand right">
       <li><a  href="/pages/about">About</a></li>
       <li><a  href="/pages/contact">Contact</a></li>       
     </ul>  
