--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
 <div class="showcase">
   <div class="row">
     <div class="col s12 m10 offset-m1 center">
-      <h5>Barter & Buy </h5>
+      <h5>Barter Or Buy </h5>
       <h2>Buying, selling or exchange your next smartphone</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit fugit deserunt quos provident aliquam inventore.</p>
       <br>
@@ -27,22 +27,22 @@
 
         <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-        <%= link_to image_tag(product.image.url(:medium)), product %>
+          <%= image_tag @product.image.url(:large) %>
         </div>
-        <div class="card-content">
+        <div class="card-content center">
           <span class="card-title activator grey-text text-darken-4"><%= product.name %></span>
           <p>Year: <%= product.year %></p>
           <p>Price:<%= product.price %></p>
 
-          <button class="btn small green lighten-3">
+          <button class="btn-small green lighten-3">
             <%= link_to 'Show', product %>
           </button>
 
-          <button class="btn small yellow lighten-3">
+          <button class="btn-small yellow lighten-3">
             <%= link_to 'Edit', edit_product_path(product) %>
           </button>
           
-          <button class="btn small red lighten-3">
+          <button class="btn-small red lighten-3">
             <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
           </button>
         </div>     
