--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,12 @@
-
-<div class='component center'>
+<div class='center'>
   <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col s6">
+      <%= image_tag @product.image.url(:large) %>
+    </div>
 
-  
-  <%= image_tag @product.image.url(:large) %>
-  <p>
+    <div class="col s6">
+    <p>
     <strong>Name:</strong>
     <%= @product.name %>
   </p>
@@ -24,6 +26,15 @@
     <%= @product.price %>
   </p>
 
-  <%= link_to 'Edit', edit_product_path(@product) %> |
-  <%= link_to 'Back', products_path %>
+      <button class="btn-large yellow lighten-3 show-button black-text">
+        <%= link_to 'Edit', edit_product_path(@product) %>
+      </button>
+
+      <button class="btn-large blue lighten-3">
+        <%= link_to 'Back', products_path %>
+      </button>
+  
+    </div>
 </div>
+
+
