--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,13 +22,16 @@
 
 <div class="row">
 <h2>Products</h2>
-  <% @products.each do |product| %>
-    <div class="col s3">
 
+  <% @products.each do |product| %>
+
+    <div class="col s3">
         <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag @product.image.url(:large) %>
-        </div>
+          <div class="card-image waves-effect waves-block waves-light">     
+            <% if product.image_url %>
+             <%= link_to image_tag(product.image.url(:medium)), product %> 
+            <% end %>          
+          </div>
         <div class="card-content center">
           <span class="card-title activator grey-text text-darken-4"><%= product.name %></span>
           <p>Year: <%= product.year %></p>
@@ -48,14 +51,15 @@
         </div>     
       </div>
     </div>
+
   <% end %>
+
   <br>
-<button class="btn large purple accent-4 ">
-  <%= link_to 'New Product', new_product_path %>
-</button>
+
 </div>
 
-
-
-
-
+<div class='center'>
+  <button class="btn large purple accent-4 ">
+    <%= link_to 'New Product', new_product_path %>
+  </button>
+</div>
